--- a/mandelbulber2/qt/material_editor.ui
+++ b/mandelbulber2/qt/material_editor.ui
@@ -128,9 +128,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-2604</y>
+        <y>-2433</y>
         <width>466</width>
-        <height>4087</height>
+        <height>4135</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -4035,34 +4035,10 @@ direction vector:</string>
                  <number>2</number>
                 </property>
                 <item>
-                 <layout class="QGridLayout" name="gridLayout_103" rowstretch="0,0" columnstretch="0,0,1">
+                 <layout class="QGridLayout" name="gridLayout_103" rowstretch="0,0,0" columnstretch="0,0,1">
                   <property name="spacing">
                    <number>2</number>
                   </property>
-                  <item row="1" column="0">
-                   <widget class="QLabel" name="label_399">
-                    <property name="text">
-                     <string>Texture intensity:</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="0" column="0">
-                   <widget class="QLabel" name="label_400">
-                    <property name="text">
-                     <string>Texture path:</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="0" column="1" colspan="2">
-                   <widget class="FileSelectWidget" name="text_file_transparency_texture" native="true">
-                    <property name="sizePolicy">
-                     <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-                      <horstretch>0</horstretch>
-                      <verstretch>0</verstretch>
-                     </sizepolicy>
-                    </property>
-                   </widget>
-                  </item>
                   <item row="1" column="2">
                    <widget class="MyDoubleSpinBox" name="spinbox_transparency_texture_intensity">
                     <property name="sizePolicy">
@@ -4085,6 +4061,62 @@ direction vector:</string>
                     </property>
                     <property name="singleStep">
                      <double>0.100000000000000</double>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="1" column="0">
+                   <widget class="QLabel" name="label_399">
+                    <property name="text">
+                     <string>Texture intensity on surface:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="0">
+                   <widget class="QLabel" name="label_400">
+                    <property name="text">
+                     <string>Texture path:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="0" column="1" colspan="2">
+                   <widget class="FileSelectWidget" name="text_file_transparency_texture" native="true">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="2" column="2">
+                   <widget class="MyDoubleSpinBox" name="spinbox_transparency_texture_intensity_vol">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="prefix">
+                     <string/>
+                    </property>
+                    <property name="suffix">
+                     <string/>
+                    </property>
+                    <property name="decimals">
+                     <number>2</number>
+                    </property>
+                    <property name="maximum">
+                     <double>1000.000000000000000</double>
+                    </property>
+                    <property name="singleStep">
+                     <double>0.100000000000000</double>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="2" column="0">
+                   <widget class="QLabel" name="label_401">
+                    <property name="text">
+                     <string>Texture intensity in volume:</string>
                     </property>
                    </widget>
                   </item>
@@ -4118,24 +4150,10 @@ direction vector:</string>
                  <number>2</number>
                 </property>
                 <item>
-                 <layout class="QGridLayout" name="gridLayout_105" rowstretch="0,0" columnstretch="0,0,1">
+                 <layout class="QGridLayout" name="gridLayout_105" rowstretch="0,0,0" columnstretch="0,0,1">
                   <property name="spacing">
                    <number>2</number>
                   </property>
-                  <item row="1" column="0">
-                   <widget class="QLabel" name="label_403">
-                    <property name="text">
-                     <string>Texture intensity:</string>
-                    </property>
-                   </widget>
-                  </item>
-                  <item row="0" column="0">
-                   <widget class="QLabel" name="label_404">
-                    <property name="text">
-                     <string>Texture path:</string>
-                    </property>
-                   </widget>
-                  </item>
                   <item row="0" column="1" colspan="2">
                    <widget class="FileSelectWidget" name="text_file_transparency_alpha_texture" native="true">
                     <property name="sizePolicy">
@@ -4146,8 +4164,54 @@ direction vector:</string>
                     </property>
                    </widget>
                   </item>
+                  <item row="0" column="0">
+                   <widget class="QLabel" name="label_404">
+                    <property name="text">
+                     <string>Texture path:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="1" column="0">
+                   <widget class="QLabel" name="label_403">
+                    <property name="text">
+                     <string>Texture intensity on surface:</string>
+                    </property>
+                   </widget>
+                  </item>
                   <item row="1" column="2">
                    <widget class="MyDoubleSpinBox" name="spinbox_transparency_alpha_texture_intensity">
+                    <property name="sizePolicy">
+                     <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+                      <horstretch>0</horstretch>
+                      <verstretch>0</verstretch>
+                     </sizepolicy>
+                    </property>
+                    <property name="prefix">
+                     <string/>
+                    </property>
+                    <property name="suffix">
+                     <string/>
+                    </property>
+                    <property name="decimals">
+                     <number>2</number>
+                    </property>
+                    <property name="maximum">
+                     <double>1000.000000000000000</double>
+                    </property>
+                    <property name="singleStep">
+                     <double>0.100000000000000</double>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="2" column="0">
+                   <widget class="QLabel" name="label_405">
+                    <property name="text">
+                     <string>Texture intensity in volume:</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item row="2" column="2">
+                   <widget class="MyDoubleSpinBox" name="spinbox_transparency_alpha_texture_intensity_vol">
                     <property name="sizePolicy">
                      <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                       <horstretch>0</horstretch>
