--- a/mandelbulber2/formula/ui/abox_donut4d.ui
+++ b/mandelbulber2/formula/ui/abox_donut4d.ui
@@ -1406,7 +1406,7 @@ scale:</string>
         <property name="text">
          <string notr="true">&lt;p&gt;Formula based on Aexion&#039;s The-Golden-Donnut&lt;br&gt;https://www.deviantart.com/aexion/art/The-Golden-Donnut-210148578&lt;br&gt;This formula contains aux.color and aux.actualScale&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
-&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_donut4d_aa1.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
+&lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_donut4d_aa1.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_donut4d_aa2.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/abox_donut4d_abs.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
         <property name="wordWrap">
          <bool>true</bool>
