--- a/mandelbulber2/formula/ui/tinker_towers.ui
+++ b/mandelbulber2/formula/ui/tinker_towers.ui
@@ -938,7 +938,11 @@
 
       &lt;span style=&quot;color:#2929cc&quot;&gt;//zXYZ = zXYZ *(1.0 - .0*flat);  // Does not play well with power DE&lt;/span&gt;
       &lt;span style=&quot;color:#2929cc&quot;&gt;//zXYZ =  zXYZ.RotateAroundVectorByAngle(u_Fv[side], 3.14159/3.0); // Taffy&lt;/span&gt;
-            &lt;span style=&quot;color:#2929cc&quot;&gt;//zXYZ = zXYZ.RotateAroundVectorByAngle(Axis, rot_angle);  // php angel4 ?? mmmmmmmmmmmfix&lt;/span&gt;
+
+            CVector4 v4 &lt;span style=&quot;color:#676767&quot;&gt;=&lt;/span&gt; &lt;span style=&quot;color:#00008f&quot;&gt;CVector4&lt;/span&gt;&lt;span style=&quot;color:#676767&quot;&gt;(&lt;/span&gt;zXYZ&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;x&lt;span style=&quot;color:#676767&quot;&gt;,&lt;/span&gt; zXYZ&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;y&lt;span style=&quot;color:#676767&quot;&gt;,&lt;/span&gt; zXYZ&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;z&lt;span style=&quot;color:#676767&quot;&gt;,&lt;/span&gt; &lt;span style=&quot;color:#ff1493&quot;&gt;0.0&lt;/span&gt;&lt;span style=&quot;color:#676767&quot;&gt;);&lt;/span&gt;
+            v4 &lt;span style=&quot;color:#676767&quot;&gt;=&lt;/span&gt; v4&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;&lt;span style=&quot;color:#00008f&quot;&gt;RotateAroundVectorByAngle&lt;/span&gt;&lt;span style=&quot;color:#676767&quot;&gt;(&lt;/span&gt;Axis&lt;span style=&quot;color:#676767&quot;&gt;,&lt;/span&gt; rot_angle&lt;span style=&quot;color:#676767&quot;&gt;);&lt;/span&gt;  &lt;span style=&quot;color:#2929cc&quot;&gt;// php angel4 ?? mmmmmmmmmmmfix&lt;/span&gt;
+            zXYZ &lt;span style=&quot;color:#676767&quot;&gt;=&lt;/span&gt; &lt;span style=&quot;color:#00008f&quot;&gt;CVector3&lt;/span&gt;&lt;span style=&quot;color:#676767&quot;&gt;(&lt;/span&gt;v4&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;x&lt;span style=&quot;color:#676767&quot;&gt;,&lt;/span&gt; v4&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;y&lt;span style=&quot;color:#676767&quot;&gt;,&lt;/span&gt; v4&lt;span style=&quot;color:#676767&quot;&gt;.&lt;/span&gt;z&lt;span style=&quot;color:#676767&quot;&gt;);&lt;/span&gt;
+
     &lt;span style=&quot;color:#676767&quot;&gt;}&lt;/span&gt;
     &lt;span style=&quot;color:#2e8b57; font-weight:bold&quot;&gt;else&lt;/span&gt;
     &lt;span style=&quot;color:#676767&quot;&gt;{&lt;/span&gt;
