--- a/mandelbulber2/qt/script_dialog.ui
+++ b/mandelbulber2/qt/script_dialog.ui
@@ -86,7 +86,7 @@
       <string>Remark: Parameter names need to be in single quotes (e.g. 'detail_level')
 Vector components of parameters should be after dot (e.g. 'camera.x')
 Vector components of destination parameter shoud be prefixed by x:, y: and z:
-Example: x: target.x*10, y: target.y*10, z: sin('frame_no'*0.1</string>
+Example: x: 'target.x' * 10, y: 'target.y' * 10, z: sin('frame_no' / pi() * 0.1)</string>
      </property>
     </widget>
    </item>
